--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Mojolicious-Plugin-BootstrapHelpers
 
 {{$NEXT}}
+    - Can add html attributes to table elements
+    - Added missing dependencies
+    - Documentation: Much improved syntax descriptions
 
 0.008  2014-09-01 10:52:55 CEST
     - Added support for placing a table in panel without a .panel-body
