--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Mojolicious-Plugin-BootstrapHelpers
 
 {{$NEXT}}
+    - Much improved syntax definitions (no functional changes)
 
 0.010  2014-09-03 16:53:37 CEST
     - Added badge helper
