--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Mojolicious-Plugin-BootstrapHelpers
 
 {{$NEXT}}
+    - Restored the accidentally removed cols support for form groups
+    - Documentation: Minor typos fixed
+    - Documentation: Removed unsupported input groups examples
 
 0.012  2014-09-04 22:58:34 CEST
     - Added simple dropdown support
