--- a/Changes
+++ b/Changes
@@ -10,6 +10,7 @@ Revision history for Mojolicious-Plugin-BootstrapHelpers
  [Enhancements]
 
  [Meta]
+ - Add DZP::PkgVersion::Block to build dependencies.
 
  [New Features]
 
