--- a/Changes
+++ b/Changes
@@ -2,12 +2,17 @@ Revision history for Mojolicious-Plugin-BootstrapHelpers
 
 {{$NEXT}}
  [API Changes]
+ - Input groups can't currently take button groups.
+ - Navs can't currently take dropdowns.
 
  [Bug Fixes]
 
  [Documentation]
+ - Note that some syntax descriptions are currently inaccurate. See examples for current
+   syntax.
 
  [Enhancements]
+ - More work on streamlining menu syntax.
 
  [Meta]
 
