--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@ Revision history for Mojolicious-Plugin-BootstrapHelpers
  [Bug Fixes]
 
  [Documentation]
+ - Formatting and minor improvements.
 
  [Enhancements]
 
