A note about inverse (navbars). Missing header added.

--- a/Changes
+++ b/Changes
@@ -6,6 +6,8 @@ Revision history for Mojolicious-Plugin-BootstrapHelpers
  [Bug Fixes]
 
  [Documentation]
+ - Inversing navbars mentioned.
+ - Added a missing header.
 
  [Enhancements]
 
