--- a/Changes
+++ b/Changes
@@ -20,6 +20,7 @@ Revision history for Mojolicious-Plugin-BootstrapHelpers
  [New Features]
 
  [Requirements]
+  - Requires latest (1.44) List::Util instead of List::MoreUtils, since it now has 'uniq'.
 
  [Revision]
 
