--- a/Changes
+++ b/Changes
@@ -10,6 +10,7 @@ Revision history for Mojolicious-Plugin-BootstrapHelpers
  [Enhancements]
 
  [New Features]
+  - Added the 'context_menu' helper, a dropdown menu without button.
 
  [Other Changes]
 
